[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Ground" type="Position2D" parent="."]
position = Vector2( 1025.56, 586.943 )

[node name="Air1" type="Position2D" parent="."]
position = Vector2( 1022.65, 332.334 )

[node name="Air2" type="Position2D" parent="."]
position = Vector2( 1021.76, 220.081 )

[node name="Air3" type="Position2D" parent="."]
position = Vector2( 1020.42, 161.215 )

[node name="Air4" type="Position2D" parent="."]
position = Vector2( 1024.13, 424.757 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
